<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.peakaboo</groupId>
		<artifactId>framework</artifactId>
		<version>6.1-SNAPSHOT</version>
	</parent>
	<groupId>org.peakaboo.framework</groupId>
	<artifactId>stratus</artifactId>
	<packaging>jar</packaging>

	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-swing-junit</artifactId>
			<version>3.17.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.24.2</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
		<dependency>
			<groupId>org.swinglabs.swingx</groupId>
			<artifactId>swingx-graphics</artifactId>
			<version>1.6.5-1</version>
		</dependency>
        <dependency>
            <groupId>org.peakaboo.framework</groupId>
            <artifactId>accent</artifactId>
            <version>${project.version}</version>
        </dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>21</source>
					<target>21</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<outputDirectory>
						${project.basedir}
					</outputDirectory>
					<finalName>libstratus-${project.version}</finalName>
					<appendAssemblyId>false</appendAssemblyId>
					<archive>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>

				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id> <!-- this is used for inheritance merges -->
						<phase>package</phase> <!-- bind to the packaging phase -->
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.5</version>
				<configuration>
					<argLine>
						--add-opens java.base/java.lang=ALL-UNNAMED
						--add-opens java.desktop/javax.swing=ALL-UNNAMED
						--add-opens java.desktop/java.awt=ALL-UNNAMED
						--add-opens java.base/java.util=ALL-UNNAMED
					</argLine>
					<forkCount>1</forkCount>
					<reuseForks>false</reuseForks>
					<includes>
						<include>**/*Test.java</include>
						<include>**/*SwingTest.java</include>
					</includes>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
